--- a/src/components/appBar/AppBar.css
+++ b/src/components/appBar/AppBar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: rgb(178, 143, 143);
+  background-color: #faffff;
 }
 
 .brand {
@@ -7,7 +7,7 @@
   font-weight: bold;
 }
 .list_item {
-  color: aliceblue;
+  color: rgb(118, 120, 121);
   margin-right: 10px;
   font-weight: bold;
   text-decoration: none;
