--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -4,34 +4,42 @@
 }
 
 #sidebar-wrapper {
-  background-color: #0488a0;
-  color: whitesmoke;
+  background: #ffffff;
+  box-shadow: 2px 0px 8px rgba(0, 0, 0, 0.06);
+  color: black;
   min-height: 100vh;
   transition: margin 0.25s ease-out;
 }
 
 #sidebar-wrapper .sidebar-heading {
-  font-size: 1.2rem;
-  color: whitesmoke;
-  padding: 10px 0;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26px;
+  color: #5b82fd;
 }
 
 #sidebar-wrapper .list-group {
   width: 15rem;
-  color: whitesmoke;
 }
 
-#sidebar-wrapper .list-group a {
-  color: whitesmoke;
+/* #sidebar-wrapper .list-group a {
+  background: #54d487;
+  color: black;
+ 
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
   padding: 5px 20px;
+  margin: 4px;
   text-decoration: none;
   font-size: 16px;
   text-transform: capitalize;
   font-weight: bold;
-}
+} */
 
 #sidebar-wrapper .list-group a:hover {
-  background-color: #7bc0ce;
+  background: #54d487;
+  color: white;
 }
 
 .navbar {
