--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -11,12 +11,9 @@
 }
 
 #sidebar-wrapper .sidebar-heading {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 26px;
   color: #ffffff;
-  border-bottom: 2px solid #5b82fd;
+  background: #5b82fd;
+  padding: 17px 0px;
 }
 
 #sidebar-wrapper .list-group {
