--- a/src/index.css
+++ b/src/index.css
@@ -29,13 +29,21 @@ html {
   color: white;
 }
 
-th {
+.tableHeader th {
   text-align: center;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
   color: white !important;
+}
+th {
+  text-align: center;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  color: rgb(23, 16, 16) !important;
 }
 
 td {
